[gd_scene load_steps=5 format=3 uid="uid://bqlm2rsqt4crn"]

[ext_resource type="Script" uid="uid://ddyfg7et3b4av" path="res://settings.gd" id="1_8ym62"]
[ext_resource type="Texture2D" uid="uid://b7ipf2j260boq" path="res://asset/art/MainMenu.png" id="2_rhn7a"]
[ext_resource type="Texture2D" uid="uid://caifnlfmelihq" path="res://asset/art/Replay_BTN.png" id="3_75b2r"]
[ext_resource type="Texture2D" uid="uid://b6o5c744rnjt" path="res://asset/UI/Music.png" id="4_brh15"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_8ym62")

[node name="Main_Menu_BG" type="TextureRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
texture = ExtResource("2_rhn7a")

[node name="Backbutton" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.891
anchor_right = 0.187
anchor_bottom = 0.891
offset_left = 55.0
offset_top = 1564.0
offset_right = 153.0
offset_bottom = 1662.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="back" type="Button" parent="Backbutton"]
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("3_75b2r")

[node name="Settings UI" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = 296.0
offset_right = 1253.0
offset_bottom = 1841.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 50

[node name="settings_ui_text" type="Label" parent="Settings UI"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "SETTINGS
"
horizontal_alignment = 1

[node name="music section" type="HBoxContainer" parent="Settings UI"]
layout_mode = 2
theme_override_constants/separation = 300

[node name="music_text" type="Label" parent="Settings UI/music section"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Music"

[node name="toggle_music" type="Button" parent="Settings UI/music section"]
layout_mode = 2
icon = ExtResource("4_brh15")

[connection signal="pressed" from="Backbutton/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Settings UI/music section/toggle_music" to="." method="_on_toggle_music_pressed"]
